--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack --colors  --progress --watch -p  --config ./webpack/config.build.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "roger",
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -30,16 +30,15 @@
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
+    "initialize-css": "^1.3.2",
     "antd": "^3.0.0",
     "immutable": "^3.8.1",
-    "initialize-css": "^1.3.2",
-    "jquery": "^3.2.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2"
   }
 }
