--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack_koa_node_mongo",
+  "name": "roger",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -30,14 +30,14 @@
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
-    "antd": "^3.3.3",
+    "antd": "^3.4.1",
     "immutable": "^3.8.2",
     "initialize-css": "^1.4.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   }
